RESOLVED FIXED314517
[JSC] Inline `String#startsWith` / `String#endsWith` with constant search string in DFG/FTL
https://bugs.webkit.org/show_bug.cgi?id=314517
Summary [JSC] Inline `String#startsWith` / `String#endsWith` with constant search str...
Sosuke Suzuki
Reported 2026-05-10 17:16:59 PDT
...
Attachments
Sosuke Suzuki
Comment 1 2026-05-10 17:18:55 PDT
Radar WebKit Bug Importer
Comment 2 2026-05-17 17:17:11 PDT
EWS
Comment 3 2026-05-17 23:00:17 PDT
Committed 313394@main (67969621f703): <https://commits.webkit.org/313394@main> Reviewed commits have been landed. Closing PR #64645 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.